--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1483,6 +1483,7 @@ textarea.custom-input:focus {
   border-bottom-right-radius: 10px;
   -webkit-box-shadow: 0 15px 20px #55555542;
           box-shadow: 0 15px 20px #55555542;
+  background: #fff;
 }
 
 /*hide the items when the select box is closed:*/
