--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1336,6 +1336,7 @@ textarea.custom-input {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   box-shadow: 0 15px 20px #55555542;
+  background: #fff;
 }
 
 /*hide the items when the select box is closed:*/
