--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1997,10 +1997,13 @@ textarea.custom-input {
     }
 
     &.mc-date--picked {
+      display: inline-block;
       border-radius: 50%;
       background: $color1;
       font-weight: 600;
       color: $color2;
+      line-height: 1.8;
+      transform: translate(11px, 2px);
     }
   }
 
